--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.0",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
