final improvements for this version

--- a/data/portfolio_projects.json
+++ b/data/portfolio_projects.json
@@ -1,18 +1,18 @@
 [
     {
         "project_name": "Flooring Installation",
-        "image": "Resized_Resized_20240306_165443.JPEG"
+        "image": "Resized_Resized_20240306_165443.jpg"
     },
     {
         "project_name": "Bathroom Renovation",
-        "image": "Resized_Resized_20231204_161849_223463781147931.JPEG"
+        "image": "Resized_Resized_20231204_161849_223463781147931.jpg"
     },
     {
         "project_name": "Commercial Courtyard Installation",
-        "image": "Resized_Resized_20230815_102145_223622606178443.JPEG"
+        "image": "Resized_Resized_20230815_102145_223622606178443.jpg"
     },
     {
         "project_name": "Commercial Restuarant Tilling Installation",
-        "image": "Resized_Resized_20231109_125211_223389226286137.JPEG"
+        "image": "Resized_Resized_20231109_125211_223389226286137.jpg"
     }
 ]
