--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "lucide-react": "^0.344.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
-    "next": "14.1.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-multi-carousel": "^2.8.5",
@@ -46,7 +46,7 @@
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.1",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
