testing production build on vercel

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "yan_contractor_project",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Christin Morton",
+    "email": "ContactMe@christinmorton.com"
+  },  
   "scripts": {
     "dev": "next dev",
     "build": "next build",
